# Physical-ai-automatic-car

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  requirements-jetson.txt  servo_calibrate_raw.py  servo_hold_test.py  servo_manual_step.py  test_servo_direct.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: github_issues.md
src/jetcar_base/: package.xml  setup.cfg  setup.py
src/jetcar_base/config/: manual_keyboard.yaml  manual_web.yaml  vehicle_hw.yaml
src/jetcar_base/jetcar_base/: keyboard_control_node.py  manual_web_stack.py  manual_yolo_stack.py  motor_test_node.py  pca9685_driver.py  servo_boot_test_node.py  servo_test_node.py  setup.py  vehicle_hw_node.py  web_control_node.py
src/jetcar_base/launch/: hardware_only.launch.py  manual_keyboard.launch.py  manual_web.launch.py
src/jetcar_control/: package.xml  setup.cfg  setup.py
src/jetcar_control/config/: control.yaml
src/jetcar_control/jetcar_control/: control_mux_node.py  drive_mode_manager_node.py
src/jetcar_control/launch/: control_stack.launch.py
src/jetcar_control/resource/: jetcar_control
src/jetcar_decision/: package.xml  setup.cfg  setup.py
src/jetcar_decision/config/: autonomous_driver.yaml  safety_supervisor.yaml
src/jetcar_decision/jetcar_decision/: autonomous_driver_node.py  safety_supervisor_node.py
src/jetcar_decision/launch/: ai_intervention.launch.py  autonomous_driver.launch.py
src/jetcar_decision/resource/: jetcar_decision
src/jetcar_perception/: package.xml  setup.cfg  setup.py
src/jetcar_perception/config/: lane_detection.yaml  object_detection.yaml  stereo_calibration.yaml  stereo_camera.yaml  stereo_depth.yaml  stereo_rectification.yaml  yolo_web.yaml  yolo_web_stereo.yaml
src/jetcar_perception/jetcar_perception/: lane_detection_node.py  object_detection_node.py  stereo_camera_node.py  stereo_depth_node.py  stereo_rectification_node.py  ufld_detector.py  yolo_engine_builder.py  yolo_web_node.py
src/jetcar_research/: package.xml  setup.cfg  setup.py
src/jetcar_research/config/: research_profiles.yaml
src/jetcar_research/jetcar_research/: experiment_profile_node.py
src/jetcar_research/launch/: full_autonomous.launch.py  research_compare.launch.py
src/jetcar_research/resource/: jetcar_research
tools/: lane_dataset_from_bag.py  train_lane_seg.sh
(+10 files in other folders)
