<?xml version="1.0"?>
<package format="3">
  <name>jetcar_decision</name>
  <version>0.0.1</version>
  <description>Decision and safety supervisor nodes for JetCar</description>
  <maintainer email="kown@example.com">kown</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
